# nwpdownload

./: .gitignore  LICENSE.txt  README.md  environment.yml  pyproject.toml
src/nwpdownload/: __init__.py  collection.py  kubernetes.py  nwpdownloader.py  xarray.py
tests/: test_nwpdownloader.py
